wip db and profiles

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -7,5 +7,6 @@
   "Too Many Links?": "صاحب روابط كثيرة؟",
   "Famous?": "مشهور؟",
   "Designer Or Creator?": "مبدع او مصمم؟",
-  "Are You...": "هل انت…"
+  "Are You...": "هل انت…",
+  "My Account": "حسابي"
 }
