wip profile links component

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -8,5 +8,10 @@
   "Famous?": "مشهور؟",
   "Designer Or Creator?": "مبدع او مصمم؟",
   "Are You...": "هل انت…",
-  "My Account": "حسابي"
+  "My Account": "حسابي",
+  "Preview": "معاينة",
+  "Edit": "تعديل",
+  "Edit Profile": "تعديل الملف الشخصي",
+  "My Links": "لينكاتي",
+  "Customize": "تخصيص"
 }
