wip create link component

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -13,5 +13,6 @@
   "Edit": "تعديل",
   "Edit Profile": "تعديل الملف الشخصي",
   "My Links": "لينكاتي",
-  "Customize": "تخصيص"
+  "Customize": "تخصيص",
+  "Your Profile Has Been Updated!": "تم حفظ البيانات!"
 }
