style fixes working on edit account component

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -14,5 +14,12 @@
   "Edit Profile": "تعديل الملف الشخصي",
   "My Links": "لينكاتي",
   "Customize": "تخصيص",
-  "Your Profile Has Been Updated!": "تم حفظ البيانات!"
+  "Your Profile Has Been Updated!": "تم حفظ البيانات!",
+  "Edit Account": "تعديل الحساب",
+  "Logout": "تسجيل الخروج",
+  "Profiles": "حساباتي",
+  "New Profile": "حساب جديد",
+  "Change Password": "تعديل كلمة المرور",
+  "Upgrade Now": "الحساب المميز",
+  "Refer a Friend": "دعوة صديق"
 }
