homepage new design

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -5,6 +5,8 @@
   "Create your account for free.": "انشئ حسابك الان بشكل مجاني",
   "Sign up with Instagram": "سجل عبر انستجرام",
   "Sign up with Twitter": "سجل عبر تويتر",
+  "Sign up with Google": "سجل عبر جوجل",
+  "Sign up with Facebook": "سجل عبر فيسبوك",
   "Too Many Links?": "صاحب روابط كثيرة؟",
   "Famous?": "مشهور؟",
   "Designer Or Creator?": "مبدع او مصمم؟",
