done emails added translation

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1,4 +1,6 @@
 {
+  "Hello!": "مرحباً!",
+  "Whoops!": "تباً!",
   "Login": "تسجيل الدخول",
   "Register": "حساب جديد",
   "Now, you just need one link!": "الآن ما تحتاجه هو رابط واحد فقط",
@@ -47,5 +49,14 @@
   "Remember Me": "تذكرني",
   "Forgot Your Password?": "هل نسيت كلمة المرور؟",
   "Reset Password": "إستعادة كلمة المرور",
-  "Send Password Reset Link": "أرسل معلومات الإستعادة"
+  "Send Password Reset Link": "أرسل معلومات الإستعادة",
+  "Verify Email Address": "تفعديل حسابك في لينكاتي",
+  "Please click the button below to verify your email address.": "من فضلك اضغط على الزر أدناه للتحقق من عنوان بريدك الإلكتروني.",
+  "If you did not create an account, no further action is required.": "إذا لم تقم بإنشاء حساب في لينكاتي، فلا يلزم اتخاذ أي إجراء آخر، فقط تجاهل هذه الرسالة.",
+  "Link Created!": "تم انشاء الرابط",
+  "Your links has been resorted!": "تم إعادة ترتيب الروابط بنجاح!",
+  "Link has been updated!": "تم تعديل الرابط!",
+  "The link has been deleted!": "تم حذف الرابط بنحاج",
+  "Profile Created": "تم انشاء حساب جديد بنجاح",
+  "Your profile has been updated!": "تم تعديل الملف الشخصي بنحاج"
 }
