--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -58,5 +58,6 @@
   "Link has been updated!": "تم تعديل الرابط!",
   "The link has been deleted!": "تم حذف الرابط بنحاج",
   "Profile Created": "تم انشاء حساب جديد بنجاح",
-  "Your profile has been updated!": "تم تعديل الملف الشخصي بنحاج"
+  "Your profile has been updated!": "تم تعديل الملف الشخصي بنحاج",
+  ":name, invited you to try Linkait!": ":name، قام بدعوتك لتجريب منصة لينكاتي!"
 }
