fix style issues on mobile

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -22,7 +22,7 @@
   "Edit": "تعديل",
   "Edit Profile": "تعديل الملف الشخصي",
   "My Links": "لينكاتي",
-  "Customize": "تخصيص",
+  "Customize": "تخصيص المظهر",
   "Your Profile Has Been Updated!": "تم حفظ البيانات!",
   "Edit Account": "تعديل الحساب",
   "Logout": "تسجيل الخروج",
