--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -50,7 +50,7 @@
   "Forgot Your Password?": "هل نسيت كلمة المرور؟",
   "Reset Password": "إستعادة كلمة المرور",
   "Send Password Reset Link": "أرسل معلومات الإستعادة",
-  "Verify Email Address": "تفعديل حسابك في لينكاتي",
+  "Verify Email Address": "تفعيل حسابك في لينكاتي",
   "Please click the button below to verify your email address.": "من فضلك اضغط على الزر أدناه للتحقق من عنوان بريدك الإلكتروني.",
   "If you did not create an account, no further action is required.": "إذا لم تقم بإنشاء حساب في لينكاتي، فلا يلزم اتخاذ أي إجراء آخر، فقط تجاهل هذه الرسالة.",
   "Link Created!": "تم انشاء الرابط",
