add username validation

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -59,5 +59,6 @@
   "The link has been deleted!": "تم حذف الرابط بنحاج",
   "Profile Created": "تم انشاء حساب جديد بنجاح",
   "Your profile has been updated!": "تم تعديل الملف الشخصي بنحاج",
-  ":name, invited you to try Linkait!": ":name، قام بدعوتك لتجريب منصة لينكاتي!"
+  ":name, invited you to try Linkait!": ":name، قام بدعوتك لتجريب منصة لينكاتي!",
+  "Username is invalid.": "اسم المستخدم غير صالح"
 }
